add WLC import; fix down detector

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-certifi==2021.5.30
-chardet==4.0.0
-idna==2.10
-PyYAML==5.4.1
-requests==2.25.1
-urllib3==1.26.5
-mysqlclient==2.0.3
+certifi
+chardet
+idna
+PyYAML
+requests
+urllib3
+mysqlclient==2.1.1
+ncclient
